src/test/ui/feature-gates/feature-gate-box-expr.stderr
error[E0658]: box expression syntax is experimental; you can call `Box::new` instead. (see issue #49733)
  --> $DIR/feature-gate-box-expr.rs:12:13
   |
LL |     let x = box 'c';
   |             ^^^^^^^
   |
   = help: add #![feature(box_syntax)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
